--- a/.env.local
+++ b/.env.local
@@ -1,22 +1,4 @@
 # Server
-NODE_ENV=development
 PORT=5005
 
-# Database
-DB_HOST=localhost
-DB_PORT=6000
-DB_NAME=elibrary_db
-DB_USER=samnang
-DB_PASSWORD=samnang@77
-
-# JWT
-JWT_SECRET=your_super_secret_jwt_key_change_this_in_production
-JWT_EXPIRE=7d
-
-# File Upload
-MAX_FILE_SIZE=52428800
-UPLOAD_PATH=./uploads
-
-# Rate Limiting
-RATE_LIMIT_WINDOW=15
-RATE_LIMIT_MAX=100
+DATABASE_URL=postgresql://elibrary:suQOsbain45Zm7Dvvb3spA1O1PMWDSIF@dpg-d68i82a48b3s73amgasg-a.singapore-postgres.render.com/elibrary_db_s4ro
