added : JWT_SECRET

--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@
 PORT=5005
 
 DATABASE_URL=postgresql://elibrary:suQOsbain45Zm7Dvvb3spA1O1PMWDSIF@dpg-d68i82a48b3s73amgasg-a.singapore-postgres.render.com/elibrary_db_s4ro
+JWT_SECRET = supersecretkey123
+JWT_EXPIRE = 7d
