feat : RBAC completed

--- a/.env
+++ b/.env
@@ -1,6 +1,13 @@
 # Server
 PORT=5005
 
+# Database Configuration production
 DATABASE_URL=postgresql://elibrary:suQOsbain45Zm7Dvvb3spA1O1PMWDSIF@dpg-d68i82a48b3s73amgasg-a.singapore-postgres.render.com/elibrary_db_s4ro
+# JWT Configuration
 JWT_SECRET = supersecretkey123
 JWT_EXPIRE = 7d
+
+ACCESS_TOKEN_SECRET= supersecretkey
+ACCESS_TOKEN_EXPIRES_IN = 15m
+REFRESH_TOKEN_SECRET = supersecretrefreshkey
+REFRESH_TOKEN_EXPIRES_IN = 7d
