--- a/.env.local
+++ b/.env.local
@@ -1,4 +1,15 @@
-# Server
+# # Server
 PORT=5005
 
+# Database Configuration production
 DATABASE_URL=postgresql://elibrary:suQOsbain45Zm7Dvvb3spA1O1PMWDSIF@dpg-d68i82a48b3s73amgasg-a.singapore-postgres.render.com/elibrary_db_s4ro
+
+# Database Configuration local
+DB_HOST=localhost
+DB_PORT=6000
+DB_NAME=elibrary_db
+DB_USER=samnang
+DB_PASSWORD=samnang@77
+
+JWT_SECRET = supersecretkey123
+JWT_EXPIRE = 7d
