--- a/.env
+++ b/.env
@@ -1,13 +1,23 @@
-# Server
+# # Server
 PORT=5005
 
 # Database Configuration production
 DATABASE_URL=postgresql://elibrary:suQOsbain45Zm7Dvvb3spA1O1PMWDSIF@dpg-d68i82a48b3s73amgasg-a.singapore-postgres.render.com/elibrary_db_s4ro
-# JWT Configuration
-JWT_SECRET = supersecretkey123
-JWT_EXPIRE = 7d
 
-ACCESS_TOKEN_SECRET= supersecretkey
-ACCESS_TOKEN_EXPIRES_IN = 15m
-REFRESH_TOKEN_SECRET = supersecretrefreshkey
-REFRESH_TOKEN_EXPIRES_IN = 7d
+# # Database Configuration local
+# DB_HOST=localhost
+# DB_PORT=6000
+# DB_NAME=elibrary_db
+# DB_USER=samnang
+# DB_PASSWORD=samnang@77
+
+ACCESS_TOKEN_SECRET=supersecretkey123
+REFRESH_TOKEN_SECRET=anothersecretkey456
+ACCESS_TOKEN_EXPIRES_IN=30d
+REFRESH_TOKEN_EXPIRES_IN=60d
+
+
+# CLOUDINARY CONFIG
+CLOUDINARY_CLOUD_NAME=dquwwwdh7
+CLOUDINARY_API_KEY=629467331283159
+CLOUDINARY_API_SECRET=vf6tCfxhYFa22i-EvKPA_fMjeBY
